[package]
name = "binstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive"] }
derive_more = "0.99.17"
test-case = "2.0.2"

[features]
